--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,8 +1,52 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+/* Liberation font ^^ */
+
+@font-face {
+  font-family: "Liberation Serif";
+  font-style: normal;
+  font-weight: 300;
+  src:         local("Liberation Serif"),
+               local("Liberation Serif Regular"),
+               local("LiberationSerif-Regular"),
+               url(LiberationSerif-Regular.ttf);
+}
+@font-face {
+  font-family: "Liberation Serif";
+  font-style: italic;
+  font-weight: 300;
+  src:         local("Liberation Serif Italic"),
+               local("LiberationSerif-Italic"),
+               url(LiberationSerif-Italic.ttf);
+}
+@font-face {
+  font-family: "Liberation Serif";
+  font-style: normal;
+  font-weight: 600;
+  src:         local("Liberation Serif Bold"),
+               local("LiberationSerif-Bold"),
+               url(LiberationSerif-Bold.ttf);
+}
+@font-face {
+  font-family: "Liberation Serif";
+  font-style: italic;
+  font-weight: 600;
+  src:         local("Liberation Serif Bold Italic"),
+               local("Liberation Serif BoldItalic"),
+               local("LiberationSerif-BoldItalic"),
+               url(LiberationSerif-BoldItalic.ttf);
+}
+@font-face {
+  font-family: "Liberation Mono";
+  font-style: normal;
+  font-weight: 300;
+  src:         local("Liberation Mono"),
+               local("LiberationMono-Regular"),
+               url(LiberationMono-Regular.ttf);
+}
+
 
 body {
   padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:14px/1.5 "Liberation Serif", Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
 }
@@ -34,7 +78,7 @@ h3, h4, h5, h6 {
 
 a {
   color:#39c;
-  font-weight:400;
+  font-weight:350;
   text-decoration:none;
 }
 
@@ -58,7 +102,7 @@ blockquote {
 }
 
 code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-family: "Liberation Mono", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color:#333;
   font-size:12px;
 }
@@ -283,7 +327,7 @@ footer {
   color: black;
   display: block;
   float: left;
-  font-family: helvetica, arial, freesans, clean, sans-serif;
+  font-family: "Liberation Sarif", helvetica, arial, freesans, clean, sans-serif;
   font-size: 12px;
   font-style: normal;
   font-variant: normal;
@@ -312,7 +356,7 @@ footer {
   color: black;
   display: inline-block;
   float: none;
-  font-family: helvetica, arial, freesans, clean, sans-serif;
+  font-family: "Liberation Sarif", helvetica, arial, freesans, clean, sans-serif;
   font-size: 1px;
   font-style: normal;
   font-variant: normal;
@@ -346,7 +390,7 @@ footer {
   color: black;
   display: inline;
   float: none;
-  font-family: helvetica, arial, freesans, clean, sans-serif;
+  font-family: "Liberation Sarif", helvetica, arial, freesans, clean, sans-serif;
   font-size: 12px;
   font-style: normal;
   font-variant: normal;
@@ -369,7 +413,7 @@ footer {
   color: #777;
   display: inline;
   float: none;
-  font-family: helvetica, arial, freesans, clean, sans-serif;
+  font-family: "Liberation Sarif", helvetica, arial, freesans, clean, sans-serif;
   font-size: 11px;
   font-style: normal;
   font-variant: normal;
