--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -10,9 +10,12 @@ layout: default
         <h1>{{ page.title }}</h1>
         <p align="justify">{{ page.date | date_to_string }}<br>
         <i>Last edit: {{ page.last | date_to_string }}</i></p>
-        <p align="justify">Tags: {% for tag in page.tags %}
-        <a href="https://www.google.ru/search?q={{ tag }}+site:arcan1s.github.io">{{ tag }}</a>
-        {% endfor %}</p>
+        <p align="justify">{{ Tags: page.tags }}</p>
+        <p align="justify"><b>Related posts</b>:<br>
+          {% for post in site.related_posts limit:3 %}
+            <i>{{ page.last | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+          {% endfor %}
+        </p>
       </header>
       <section>
 
