+ added plugin for sitemap generation - removed license file (now it is link to authors)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{{ page.title }}</title>
     <meta name="author" content="Evgeniy Alekseev" />
     <meta name="description" content="arcanis' homepage" />
-    <link rel="license" type="text/html" href="/LICENSE" />
+    <link rel="license" type="text/html" href="/authors" />
 
     <link rel="stylesheet" href="/resources/styles.css">
     <link rel="stylesheet" href="/resources/pygment_trac.css">
@@ -43,7 +43,7 @@
            <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
       </footer>
     </div>
-    <script src="/javascripts/scale.fix.js"></script>
+    <script src="/js/scale.fix.js"></script>
 
   </body>
 </html>
