--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,5 +1,4 @@
 /* Liberation font ^^ */
-
 @font-face {
   font-family: "Liberation Serif";
   font-style: normal;
@@ -47,12 +46,12 @@
 body {
   padding:50px;
   font:14px/1.5 "Liberation Serif", Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
+  color:#555555;
   font-weight:300;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#222222;
   margin:0 0 20px;
 }
 
@@ -109,7 +108,7 @@ code, pre {
 
 pre {
   padding:8px 15px;
-  background: #f8f8f8;  
+  background: #f8f8f8;
   border-radius:5px;
   border:1px solid #e5e5e5;
   overflow-x: auto;
@@ -312,12 +311,7 @@ footer {
   }
 }
 
-
-
-/********************************
-*  COMMENTS
-********************************/
-
+/* COMMENTS */
 .comment {
     background-color: transparent;
     border-color: #CACACA;
@@ -329,7 +323,7 @@ footer {
     margin-top: 10px;
     padding: 0px;
     width: 100%;
-  }
+}
 
 .comment .commentheader {
   border-bottom-color: #CACACA;
@@ -397,7 +391,6 @@ footer {
 .comment .commentheader a:hover {
   border-bottom:1px solid;
 }
-
 
 .comment .commentheader .commentuser {
   background-color: transparent;
