--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="description" content="arcanis' homepage" />
     <link rel="license" type="text/html" href="/authors" />
 
-    <link rel="stylesheet" href="/resources/styles.css">
+    <link rel="stylesheet" href="/resources/css/styles.css">
     <link rel="shortcut icon" href="/resources/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -42,7 +42,7 @@
            <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
       </footer>
     </div>
-    <script src="/js/scale.fix.js"></script>
+    <script src="/resources/js/scale.fix.js"></script>
 
   </body>
 </html>
