--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,8 @@
           {% include footer_sharethis.html %}
         {% endif %}
            <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
+        <p><a href="{{ page.url }}"><img src="/resources/en.png"></a>
+        <a href="/ru{{ page.url }}"><img src="/resources/ru.png"></a></p>
       </footer>
     </div>
     <script src="/resources/js/scale.fix.js"></script>
