--- a/_includes/footer_fullback.html
+++ b/_includes/footer_fullback.html
@@ -1,2 +1,7 @@
-<p class="view"><a href="javascript:history.back()">Back</a><br>
-<a href="/">Back to Homepage</a></p>
+{% if page.category == "ru" %}
+  <p class="view"><a href="javascript:history.back()">Назад</a><br>
+  <a href="/ru">Домашняя страница</a></p>
+{% else %}
+  <p class="view"><a href="javascript:history.back()">Back</a><br>
+  <a href="/">Back to Homepage</a></p>
+{% endif %}
