--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,25 +9,44 @@ layout: default
       <header>
         <h1>{{ page.title }}</h1>
         <p class="view">{{ page.description }}</p>
-        <p class="view"><a href="#info">General information</a><br>
-                        <a href="#install">Installation guide</a><br>
-                        <a href="#howto">How to use</a><br>
-                        <a href="#config">Configuration</a><br>
-                        {% if page.hasgui == true %}
-                          <a href="#gui">GUI</a><br>
-                          <a href="#screenshots">Screenshots</a><br>
-                        {% endif %}
-                        <a href="#links">Links</a></p>
+        {% if page.category == "ru" %}
+          <p class="view"><a href="#info">Общая информация</a><br>
+          <a href="#install">Установка</a><br>
+          <a href="#howto">Использование</a><br>
+          <a href="#config">Настройка</a><br>
+          {% if page.hasgui == true %}
+            <a href="#gui">Графический интерфейс</a><br>
+            <a href="#screenshots">Скриншоты</a><br>
+          {% endif %}
+          <a href="#links">Ссылки</a></p>
+        {% else %}
+          <p class="view"><a href="#info">General information</a><br>
+          <a href="#install">Installation guide</a><br>
+          <a href="#howto">How to use</a><br>
+          <a href="#config">Configuration</a><br>
+          {% if page.hasgui == true %}
+            <a href="#gui">GUI</a><br>
+            <a href="#screenshots">Screenshots</a><br>
+          {% endif %}
+          <a href="#links">Links</a></p>
+        {% endif %}
       </header>
       <section>
 
 {{ content }}
 
-<h2><a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
-<ul>
-  <li><a href="https://github.com/arcan1s/{{ page.short }}">GitHub repo</a></li>
-  <li><a href="https://github.com/arcan1s/{{ page.short }}/releases">Latest release</a></li>
-  {% for link in page.links %}
+{% if page.category == "ru" %}
+  <h2><a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Ссылки</h2>
+  <ul>
+    <li><a href="https://github.com/arcan1s/{{ page.short }}">Репозиторий на GitHub</a></li>
+    <li><a href="https://github.com/arcan1s/{{ page.short }}/releases">Последний релиз</a></li>
+{% else %}
+  <h2><a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
+  <ul>
+    <li><a href="https://github.com/arcan1s/{{ page.short }}">GitHub repo</a></li>
+    <li><a href="https://github.com/arcan1s/{{ page.short }}/releases">Latest release</a></li>
+{% endif %}
+{% for link in page.links %}
     <li>{{ link }}</li>
-  {% endfor %}
-</ul>
+{% endfor %}
+  </ul>
