--- a/_includes/footer_comment.html
+++ b/_includes/footer_comment.html
@@ -9,12 +9,21 @@
     }
   });
 </script>
-<div id="comments">
-  <h2>Comments</h2>
-  <div id="header">
-    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/{{page.commentIssueId}}" target="_blank"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+{% if page.category == "ru" %}
+  <div id="comments">
+    <h2>Комментарии</h2>
+    <div id="header">
+      Хотите оставить комментарий? Посетите <a href="https://github.com/arcan1s/arcan1s.github.io/issues/{{page.commentIssueId}}" target="_blank">эту страницу на GitHub</a> (Вам необходим аккаунт на GitHub).
+    </div>
   </div>
-</div>
+{% else %}
+  <div id="comments">
+    <h2>Comments</h2>
+    <div id="header">
+      Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/{{page.commentIssueId}}" target="_blank"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+    </div>
+  </div>
+{% endif %}
 <script type="text/javascript">
   function loadComments(data) {
     for (var i=0; i<data.length; i++) {
