--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -8,14 +8,29 @@ layout: default
     <div class="wrapper">
       <header>
         <h1>{{ page.title }}</h1>
-        <p align="justify">{{ page.date | date_to_string }}<br>
-        <i>Last edit: {{ page.last | date_to_string }}</i></p>
-        <p align="justify">{{ Tags: page.tags }}</p>
-        <p align="justify"><b>Related posts</b>:<br>
+        {% if page.category == "ru" %}
+          <p align="justify">{{ page.date | date_to_string }}<br>
+          <i>Последнее редактирование: {{ page.last | date_to_string }}</i></p>
+          <p align="justify"><b>Тэги</b>: {{ page.tags }}</p>
+          <p align="justify"><b>Похожие посты</b>:<br>
           {% for post in site.related_posts limit:3 %}
-            <i>{{ page.last | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+            {% if post.category == "ru" %}
+              <i>{{ page.last | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+            {% endif %}
           {% endfor %}
-        </p>
+          </p>
+        {% else %}
+          <p align="justify">{{ page.date | date_to_string }}<br>
+          <i>Last edit: {{ page.last | date_to_string }}</i></p>
+          <p align="justify"><b>Tags</b>: {{ page.tags }}</p>
+          <p align="justify"><b>Related posts</b>:<br>
+          {% for post in site.related_posts limit:3 %}
+            {% if post.category != "ru" %}
+              <i>{{ page.last | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+            {% endif %}
+          {% endfor %}
+          </p>
+        {% endif %}
       </header>
       <section>
 
