--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,11 @@
         {% endif %}
         {% if page.category == "ru" %}
           <small>Расположено на GitHub Pages. <a href="/ru/authors">Авторы</a></small></p>
-          <p><a href="{{ page.url | replace: '/ru/', '/' }}"><img src="/resources/en.png"></a></p>
+          {% if page.title == "arcanis" %}
+            <p><a href="/en/"><img src="/resources/en.png"></a></p>
+          {% else %}
+            <p><a href="{{ page.url | replace: '/ru/', '/' }}"><img src="/resources/en.png"></a></p>
+          {% endif %}
         {% else %}
           <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
           <p><a href="/ru{{ page.url }}"><img src="/resources/ru.png"></a></p>
