translated all pages except blog

--- a/_includes/footer_fullback.html
+++ b/_includes/footer_fullback.html
@@ -1,7 +1,7 @@
 {% if page.category == "ru" %}
   <p class="view"><a href="javascript:history.back()">Назад</a><br>
-  <a href="/ru">Домашняя страница</a></p>
+  <a href="/ru">Главная</a></p>
 {% else %}
   <p class="view"><a href="javascript:history.back()">Back</a><br>
-  <a href="/">Back to Homepage</a></p>
+  <a href="/">Home</a></p>
 {% endif %}
