--- a/_includes/footer_back.html
+++ b/_includes/footer_back.html
@@ -1,5 +1,5 @@
 {% if page.category == "ru" %}
-  <p class="view"><a href="/ru">Домашняя страница</a></p>
+  <p class="view"><a href="/ru">Главная</a></p>
 {% else %}
-  <p class="view"><a href="/">Back to Homepage</a></p>
+  <p class="view"><a href="/">Home</a></p>
 {% endif %}
