--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -38,7 +38,7 @@ layout: default
 {% if page.category == "ru" %}
   <h2><a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Ссылки</h2>
   <ul>
-    <li><a href="https://github.com/arcan1s/{{ page.short }}">Репозиторий на GitHub</a></li>
+    <li>Репозиторий на <a href="https://github.com/arcan1s/{{ page.short }}">GitHub</a></li>
     <li><a href="https://github.com/arcan1s/{{ page.short }}/releases">Последний релиз</a></li>
 {% else %}
   <h2><a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
