--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,18 @@
         {% endif %}
         {% if page.category == "ru" %}
           <small>Расположено на GitHub Pages. <a href="/ru/authors">Авторы</a></small></p>
-          <p><a href="{{ page.url | replace: '/ru/', '/' }}"><img src="/resources/en.png"></a></p>
+          {% if page.type == "paper" %}
+            <p><a href="{{ page.url | replace: '/ru/', '/en/' }}"><img src="/resources/en.png"></a></p>
+          {% else %}
+            <p><a href="{{ page.url | replace: '/ru/', '/' }}"><img src="/resources/en.png"></a></p>
+          {% endif %}
         {% else %}
           <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
-          <p><a href="/ru{{ page.url }}"><img src="/resources/ru.png"></a></p>
+          {% if page.type == "paper" %}
+            <p><a href="{{ page.url | replace: '/en/', '/ru/' }}"><img src="/resources/en.png"></a></p>
+          {% else %}
+            <p><a href="/ru{{ page.url }}"><img src="/resources/ru.png"></a></p>
+          {% endif %}
         {% endif %}
       </footer>
     </div>
