--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -9,24 +9,23 @@ layout: default
       <header>
         <h1>{{ page.title }}</h1>
         {% if page.category == "ru" %}
-          <p align="justify">{{ page.date | date_to_string }}<br>
-          <i>Последнее редактирование: {{ page.last | date_to_string }}</i></p>
+          {% assign post = page %}
+          <p align="justify">{% include shortdate_to_ru.html %}</p>
           <p align="justify"><b>Тэги</b>: {{ page.tags }}</p>
           <p align="justify"><b>Похожие посты</b>:<br>
           {% for post in site.related_posts limit:3 %}
             {% if post.category == "ru" %}
-              <i>{{ page.last | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+              <i>{% include shortdate_to_ru.html %}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
             {% endif %}
           {% endfor %}
           </p>
         {% else %}
-          <p align="justify">{{ page.date | date_to_string }}<br>
-          <i>Last edit: {{ page.last | date_to_string }}</i></p>
+          <p align="justify">{{ page.date | date_to_string }}<br></p>
           <p align="justify"><b>Tags</b>: {{ page.tags }}</p>
           <p align="justify"><b>Related posts</b>:<br>
           {% for post in site.related_posts limit:3 %}
             {% if post.category != "ru" %}
-              <i>{{ page.last | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+              <i>{{ post.date | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
             {% endif %}
           {% endfor %}
           </p>
