--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,23 +39,7 @@
         {% if page.share == true %}
           {% include footer_sharethis.html %}
         {% endif %}
-        <p>
-          {% if page.category == "ru" %}
-            {% if page.type == "paper" %}
-              <a href="{{ page.url | replace: '/ru/', '/en/' }}"><img src="/resources/en.png"></a>
-            {% else %}
-              <a href="{{ page.url | replace: '/ru/', '/' }}"><img src="/resources/en.png"></a>
-            {% endif %}
-            <small>Расположено на GitHub Pages. <a href="/ru/authors">Авторы</a></small>
-          {% else %}
-            {% if page.type == "paper" %}
-              <a href="{{ page.url | replace: '/en/', '/ru/' }}"><img src="/resources/en.png"></a>
-            {% else %}
-              <a href="/ru{{ page.url }}"><img src="/resources/ru.png"></a>
-            {% endif %}
-            <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small>
-          {% endif %}
-        </p>
+        {% include footer_sign.html %}
       </footer>
     </div>
     <script src="/resources/js/scale.fix.js"></script>
