--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -145,7 +145,7 @@ a small {
 }
 
 blockquote {
-  border-left: 1px solid #e5e5e5;
+  border-left: 1px solid #ffffff;
   margin: 0;
   padding: 0 0 0 20px;
   font-style: italic;
