--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    {% include google_analytics.html %}
     {% if page.share == true %}
       {% include header_sharethis.html %}
     {% endif %}
