--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -7,7 +7,6 @@ layout: default
   <body>
     <div class="wrapper">
       <header>
-        <h1>{{ page.title }}</h1>
         {% if page.category == "ru" %}
           {% assign post = page %}
           <p align="justify">{% include shortdate_to_ru.html %}</p>
@@ -21,7 +20,7 @@ layout: default
 <!--               do nothing -->
               {% else %}
                 {% if post.category == "ru" %}
-                  <i>{% include shortdate_to_ru.html %}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+                  <a href="{{ post.url }}">{{ post.title }}</a><br>
                 {% endif %}
               {% endif %}
             {% endfor %}
@@ -39,7 +38,7 @@ layout: default
 <!--               do nothing -->
               {% else %}
                 {% if post.category != "ru" %}
-                  <i>{{ post.date | date_to_string }}</i> <a href="{{ post.url }}">{{ post.title }}</a><br>
+                  <a href="{{ post.url }}">{{ post.title }}</a><br>
                 {% endif %}
               {% endif %}
             {% endfor %}
@@ -49,7 +48,7 @@ layout: default
       </header>
       <section>
 
-<a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a>
+<a name="" class="anchor" href="#"><span class="octicon octicon-link"><h1>{{ page.title }}</h1></span></a>
 <p align="justify">{{ page.description }}</p>
 
 {{ content }}
